# dibim

./: .gitignore  .prettierrc.toml  License.md  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  License.md  constants.ts  context.ts  i18n.ts  invoke.ts  invoker.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  my_sql.rs  postgres_sql.rs  postgres_sql.rs_  sqlite.rs  sqlx.rs  types.rs
src-tauri/src/commands/: aes_gcm.rs  fs.rs  mod.rs  sha.rs  sql.rs
src-tauri/src/utils/: aes_gcm.rs  common.rs  fs.rs  mod.rs  sha.rs  sqlx.rs  sqlx_common.rs  sqlx_mysql.rs  sqlx_pg.rs  sqlx_public.rs  sqlx_sqlite.rs
src/assets/db_logo/: copyright.md
src/components/: About.tsx  AppSidebar.tsx  ConfirmDialog.tsx  DataTypeIcon.tsx  DropdownList.tsx  EditableTable.tsx  EmptyList.tsx  LabeledDiv.tsx  ListWithAction.tsx  Main.tsx  MainSidebar.tsx  Null.tsx  PaginationSection.tsx  SearchableSelect.tsx  Sidebar.tsx  SqlCodeViewer.tsx  TableSection.tsx  TextNotification.tsx  TextWarning.tsx  TooltipGroup.tsx  TooltipSection.tsx  app-sidebar.tsx  sub-sideba-dbsr.tsx
src/components/list_bar/: DatabaseList.tsx  TableList.tsx
src/components/main_area/: Connection.tsx  index.tsx  (+8 more)
src/databases/: README.md  adapter,.ts  adapter_uils.ts  constants.ts  modify_table_data.ts  types.ts  utils.ts
src/hooks/: useActiveTabStore.ts
src/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  ru.json  tr.json  uk.json  zh_hans.json  zh_hant.json
src/pages/: Index.tsx  Main.tsx
src/store/: core.ts  index.ts  tabs.ts  valtio.ts
src/styles/: app.scss  theme.scss
src/tests/: color.test.ts  constants.test.ts  utils.test.ts
src/types/: conf_file.ts  i18n.d.ts  types.ts
src/utils/:  media_query.ts  color.ts  config_file.ts  format_sql.ts  number.ts  render.tsx  util.ts
(+103 files in other folders)
